--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "eslint-import-resolver-typescript": "3.5.3",
     "eslint-plugin-import": "2.27.5",
     "prettier": "2.8.4",
-    "typescript": "4.9.5"
+    "typescript": "^5.5.3"
   },
   "resolutions": {
     "minipass": "4.2.5",
