--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "1.2.1",
     "date-fns": "2.29.3",
     "draft-js": "0.11.7",
+    "file-saver": "^2.0.5",
     "i18next": "22.4.11",
     "i18next-browser-languagedetector": "7.0.1",
     "i18next-http-backend": "2.2.0",
@@ -71,6 +72,7 @@
     "recharts": "2.4.3",
     "stylis": "4.1.3",
     "stylis-plugin-rtl": "2.1.1",
+    "xlsx": "^0.18.5",
     "yup": "1.0.2"
   },
   "devDependencies": {
@@ -81,6 +83,7 @@
     "@iconify/utils": "2.1.5",
     "@types/cleave.js": "1.4.7",
     "@types/draft-js": "0.11.10",
+    "@types/file-saver": "^2.0.7",
     "@types/jsonwebtoken": "8.5.9",
     "@types/node": "18.15.3",
     "@types/nprogress": "0.2.0",
